 - Change: You will no longer lose your ankh/scroll of respawning if someone respawns you by Phoenix or warden's ultimate
 - Change: Bash now holds for 0.7 seconds instead of 1.0
 - Change: Humans can no longer teleport into the VIP Escape zone
 - Change: A recompile is no longer required for a DOD/CS/CZ plugin
 - Removed: FT_impale_intensity cvar (edit this constant at the top of skills.inl)
 - Removed: FT_blink_radius cvar (replaced with NECKLACE_RADIUS define)
 - Removed: FT_healing_range cvar (defined at top of skills.inl)
 - Removed: FT_no_orcnades cvar
 - Removed: Human's teleport (Blink is the ultimate)
 - Removed: Cheating Death check
 - Removed: FT_spec_info (default is on, compile time option at top of warcraft3ft.sma)
 - Removed: FT_items_in_hud (option no longer available)
 - Removed: FT_show_icons (always on)
 - Removed: FT_centerhud (this actually hasn't done anything for quite a few versions)
 - Removed: DOD_bootspeed (you can change it at the top of items.inl)
 - Removed: sv_warcraft3 (added a start/stop option)
 - Removed: PRECACHE_WAR3FTSOUNDS define, precached sounds are required

//make mysqlx saving threaded and pruning
//finish re-writing how skills are handled
//verify all skills given with selectskill
//allow user to changerace when in spec?
//g_buyTime - buytime check for shopmenu??
//Fix bug with doing autoselect w/FT_Races 8 then changerace and CENTER_CHANGED_NEXT displaying
//necklace of immunity = charges
//spec hudmsg needs to not carry over when you spawn
//reset skills/ultimates when user dies or right before the round starts
//let /level show the user's XP if they're dead!
//save icon info
//remove all task_exists
//fix hex playing after ur dead...
//bug: phoenix will try to respawn users when changing team
//bug: strip_user_weapons will remove bomb + not give it back
//block knife = http://forums.alliedmods.net/showthread.php?t=29836

//shopmenu 3 ideas:
// immune to some magic
// immune to physical damage
// show invis peeps...
