@@ -312,7 +312,7 @@ DOD_INFO_SHOPMENU_2 = You will now have more stamina
 INFO_SHOPMENU_3 = Each attack will now do an additional %d damage
 INFO_SHOPMENU_4 = You are now %0.0f%% less visible
 INFO_SHOPMENU_5 = You will now gain %0.0f%% of the damage done to enemies back as health
-INFO_SHOPMENU_6 = You will now be immune to all enemy ultimates
+INFO_SHOPMENU_6 = You have been given %d charges, each charge will block an enemy ultimate
 INFO_SHOPMENU_7 = You will now slow enemies by %0.0f%% with each successful hit
 INFO_SHOPMENU_8 = You will be given an additional %d health
 INFO_SHOPMENU_9 = You just gained %d experience from purchasing a tome
