@@ -632,7 +632,7 @@ public _MENU_Shopmenu1( id, iKey )
 		return;
 	}
 
-	if ( ITEM_GetSlot( id ) == ITEM_SLOT_FULL )
+	if ( ITEM_GetSlot( id ) == ITEM_SLOT_FULL && iKey != ITEM_NECKLACE )
 	{
 		g_iFutureItem[id] = iKey;
 
@@ -655,7 +655,7 @@ public _MENU_Shopmenu2( id, iKey )
 
 	iKey += MAX_PAGE_ITEMS;
 	
-	if ( ITEM_GetSlot( id ) == ITEM_SLOT_FULL )
+	if ( ITEM_GetSlot( id ) == ITEM_SLOT_FULL && iKey != ITEM_RING )
 	{
 		g_iFutureItem[id] = iKey;
 
